--- a/app/templates/win.html
+++ b/app/templates/win.html
@@ -73,7 +73,7 @@
             <div class="row" style="padding-top: 10px;">
                 <div class="col-lg-6">
                     <div class="bs-vertical-wizard">
-                        <ul>
+                        <!--<ul>
                             <li class="complete d-flex align-content-center">
                                 <div><i class="ico fa fa-circle ico-green"></i>2017-03-20</div>
                                 <div>380636994312</div>
@@ -124,12 +124,12 @@
                                 <div>380633255111</div>
                                 <div>Rodolfo Morris</div>
                             </li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="bs-vertical-wizard">
-                        <ul>
+                        <!--<ul>
                             <li class="complete d-flex align-content-center">
                                 <div><i class="ico fa fa-circle ico-green"></i>2017-03-20</div>
                                 <div>380636994312</div>
@@ -160,21 +160,21 @@
                                 <div>380636884321</div>
                                 <div>Cole Stephens</div>
                             </li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row video-block d-flex justify-content-between">
+    <!--<div class="row video-block d-flex justify-content-between">
         <iframe class="p-2" width="420" height="315" frameborder="0"
                 src="https://www.youtube.com/embed/qEoxu0_8uZU">
         </iframe>
         <iframe class="p-2" width="420" height="315" frameborder="0"
                 src="https://www.youtube.com/embed/qApOLaLYZb0">
         </iframe>
-    </div>
+    </div>-->
 
     <div class="jumbotron winners2" style="background-image:url('../static/img/velosiped.png');">
         <div class="container">
@@ -183,13 +183,21 @@
                 <div class="col-md-6">
                     <div class="bs-vertical-wizard velosiped">
                         <ul>
-                            <li class="complete active">
+                            <!--<li class="complete active">-->
+                                <!--<span class="fa-stack fa-lg">-->
+                                  <!--<i class="fa fa-circle ico-green fa-stack-2x"></i>-->
+                                  <!--<strong class="fa calendar-text fa-stack-1x fa-inverse">1</strong>-->
+                                <!--</span>-->
+                                <!--<div class="win-text-1">2017-09-25</div>-->
+                                <!--<div class="win-text-2">Альона м.Киев</div>-->
+                            <!--</li>-->
+                            <li class="complete">
                                 <span class="fa-stack fa-lg">
                                   <i class="fa fa-circle ico-green fa-stack-2x"></i>
                                   <strong class="fa calendar-text fa-stack-1x fa-inverse">1</strong>
                                 </span>
-                                <div class="win-text-1">2017-03-22</div>
-                                <div class="win-text-2">Альона м.Киев</div>
+                                <div class="win-text-1">Розіграш відбудеться</div>
+                                <div class="win-text-2">25.09.2017</div>
                             </li>
                             <li class="complete">
                                 <span class="fa-stack fa-lg">
@@ -197,7 +205,7 @@
                                   <strong class="fa calendar-text fa-stack-1x fa-inverse">2</strong>
                                 </span>
                                 <div class="win-text-1">Розіграш відбудеться</div>
-                                <div class="win-text-2">25.09.17</div>
+                                <div class="win-text-2">02.10.2017</div>
                             </li>
                             <li class="complete">
                                 <span class="fa-stack fa-lg">
@@ -205,7 +213,7 @@
                                   <strong class="fa calendar-text fa-stack-1x fa-inverse">3</strong>
                                 </span>
                                 <div class="win-text-1">Розіграш відбудеться</div>
-                                <div class="win-text-2">25.09.17</div>
+                                <div class="win-text-2">09.10.2017</div>
                             </li>
                         </ul>
                     </div>
@@ -219,7 +227,7 @@
                                   <strong class="fa calendar-text fa-stack-1x fa-inverse">4</strong>
                                 </span>
                                 <div class="win-text-1">Розіграш відбудеться</div>
-                                <div class="win-text-2">25.09.17</div>
+                                <div class="win-text-2">16.10.2017</div>
                             </li>
                             <li class="complete">
                                 <span class="fa-stack fa-lg">
@@ -227,7 +235,7 @@
                                   <strong class="fa calendar-text fa-stack-1x fa-inverse">5</strong>
                                 </span>
                                 <div class="win-text-1">Розіграш відбудеться</div>
-                                <div class="win-text-2">25.09.17</div>
+                                <div class="win-text-2">23.10.2017</div>
                             </li>
                             <li class="complete">
                                 <span class="fa-stack fa-lg">
@@ -235,7 +243,7 @@
                                   <strong class="fa calendar-text fa-stack-1x fa-inverse">6</strong>
                                 </span>
                                 <div class="win-text-1">Розіграш відбудеться</div>
-                                <div class="win-text-2">25.09.17</div>
+                                <div class="win-text-2">30.10.2017</div>
                             </li>
                         </ul>
                     </div>
