Addong working mail-form

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,16 @@
         <link rel="stylesheet" href="../static/css/style.min.css">
 
         <script async src="../static/js/app.min.js"></script>
+	<style>
+                @media only screen and (max-width : 480px) {
+			body {
+				background-position-x: 32%;
+			}
+			.phrase-block {
+    				margin-top: 125px;
+			}
+                }
+        </style>
     </head>
     <body>
         <!--[if lt IE 8]>
