--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -110,7 +110,7 @@
 5.1.1. Щоденний Подарунок Акції – «50 гривень на рахунок мобільного телефону» (далі – "Щоденний Подарунок Акції") у кількості 130 (сто тридцять) шт. на день. Загальна кількість «Щоденних подарунків Акції» - 5460 шт.
 5.1.2. Щотижневий Подарунок Акції – «Велосипед» у кількості 1 (одна) шт. на тиждень. Загальна кількість  «Щотижневих подарунків» -  6 шт.
 5.2. Під Щоденним Подарунком Акції мається на увазі поповнення рахунку мобільного телефону будь-якого GSM оператора в Україні на 50,00 гривень.
-5.3. Під Щотижневим Подарунком Акції мається на увазі велосипед на вибір з переліку, обраного Організатором/ Виконавцем,  номінальною вартістю до 20 000,00 (двадцяти тисяч) гривень, у тому числі ПДВ.
+5.3. Під Щотижневим Подарунком Акції мається на увазі велосипед на вибір з переліку, обраного Організатором/ Виконавцем,  номінальною вартістю до 20 000,00 (двадцяти тисяч) гривень, у тому числі ПДВ. Зовнішній вигляд Подарунків може відрізнятися від зображень на рекламно-інформаційних матеріалах.
 5.4. Кількість Подарунків Акції обмежена і складає зазначену вище кількість.
 5.5. Фонд Подарунків Акції складається за рахунок власних засобів Організатора Акції і використовується виключно для надання Подарунків Акції переможцям Акції.
                 <br><h5>6. Визначення Переможців Акції.</h5>
