--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="../static/css/style.min.css">
 
         <script async src="../static/js/app.min.js"></script>
-	<style>
+	    <style>
                 @media only screen and (max-width : 480px) {
 			body {
 				background-position-x: 32%;
@@ -25,6 +25,14 @@
 			}
                 }
         </style>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-KD7KMX4');
+        </script>
+        <!-- End Google Tag Manager -->
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -113,5 +121,19 @@
         </div>
       </footer>
     </div>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106638262-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106638262-1');
+    </script>
+    <!--End-->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KD7KMX4"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     </body>
 </html>
